--- a/css/2013-dark.css
+++ b/css/2013-dark.css
@@ -69,7 +69,7 @@
     background: black !important;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider-handle {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider-handle {
 	background: #ddd !important;
 }
 
