--- a/css/2006.css
+++ b/css/2006.css
@@ -31,7 +31,7 @@
     margin-left: 60px;
 }
 
-.ytp-big-mode .ytp-tooltip.ytp-bottom.ytp-rounded-tooltip.ytp-preview {
+.ytp-fullscreen .ytp-tooltip.ytp-bottom.ytp-rounded-tooltip.ytp-preview {
     margin-left: 0;
 }
 
@@ -52,7 +52,7 @@
 	width: 100% !important;
 }
 
-.html5-video-player.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar-container {
+.html5-video-player.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar-container {
     top: -9px !important;
     left: 0 !important;
 }
@@ -63,12 +63,12 @@
 
 /* this is only used in embeds & fullscreen */
 .ytp-embed .ytp-chrome-bottom .ytp-chapters-container,
-.ytp-big-mode .ytp-chrome-bottom .ytp-chapters-container {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-chapters-container {
     width: max-content !important;
 }
 
 .ytp-embed .ytp-chrome-bottom .ytp-progress-bar:after,
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar:after {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar:after {
     content: '';
     display: block;
     position: absolute;
@@ -80,7 +80,7 @@
     transform: scaleY(.6);
 }
 
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar:after {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar:after {
 	right: -60px;
 	width: 60px;
 }
@@ -126,7 +126,7 @@
     top: 0;
 }
 
-.ytp-big-mode .ytp-progress-bar {
+.ytp-fullscreen .ytp-progress-bar {
     bottom: 1px;
 }
 
@@ -175,7 +175,7 @@
     bottom: -45px;
 }
 
-.ytp-big-mode.ytp-autohide:not(.ytp-watch-controls):not(.paused-mode) .ytp-chrome-bottom, .ytp-big-mode .ytp-chrome-bottom[aria-hidden=true] {
+.ytp-fullscreen.ytp-autohide:not(.ytp-watch-controls):not(.paused-mode) .ytp-chrome-bottom, .ytp-fullscreen .ytp-chrome-bottom[aria-hidden=true] {
     opacity: 1 !important;
     bottom: -41px;
 }
@@ -189,7 +189,7 @@
     margin-left: -12px;
 }
 
-.ytp-big-mode.ytp-autohide .ytp-progress-bar-container {
+.ytp-fullscreen.ytp-autohide .ytp-progress-bar-container {
     width: calc( 100% + 48px );
     margin-left: -24px;
 }
@@ -361,18 +361,18 @@
     background: rgb(135, 135, 135);
 }
 
-.html5-video-player.ytp-big-mode .ytp-chrome-bottom .ytp-chrome-controls .ytp-volume-area {
+.html5-video-player.ytp-fullscreen .ytp-chrome-bottom .ytp-chrome-controls .ytp-volume-area {
     width: 124px;
 }
 
-.ytp-big-mode .ytp-volume-area .ytp-volume-panel {
+.ytp-fullscreen .ytp-volume-area .ytp-volume-panel {
     display: inline-block !important;
     position: relative;
     width: 78px !important;
     top: 2px;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle::before {
+.ytp-fullscreen .ytp-volume-slider-handle::before {
     left: -96px;
 }
 
@@ -400,7 +400,7 @@
     bottom: 5px;
 }
 
-.html5-video-player.ytp-big-mode .ytp-button.ytp-volume-icon {
+.html5-video-player.ytp-fullscreen .ytp-button.ytp-volume-icon {
     top: -23px;
 }
 
@@ -472,7 +472,7 @@
     top: 2px !important;
 }
 
-.ytp-big-mode .ytp-right-controls .ytp-button {
+.ytp-fullscreen .ytp-right-controls .ytp-button {
     width: 40px !important;
     height: 100% !important;
 }
@@ -531,7 +531,7 @@
 	top: 5px !important;
 }
 
-.ytp-big-mode .ytp-button.ytp-settings-button::after {
+.ytp-fullscreen .ytp-button.ytp-settings-button::after {
 	font-size: 8px !important;
 	right: 2px !important;
 	top: 5px !important;
@@ -576,7 +576,7 @@
     background: url('chrome-extension://__MSG_@@extension_id__/img/2006/un-fullscreen-hover.gif') no-repeat center;
 }
 
-.ytp-big-mode .ytp-fullscreen-button.ytp-button {
+.ytp-fullscreen .ytp-fullscreen-button.ytp-button {
     position: relative;
 }
 
@@ -618,7 +618,7 @@
     top: -9px;
 }
 
-.html5-video-player.ytp-delhi-modern.ytp-big-mode .ytp-chrome-bottom .ytp-time-wrapper {
+.html5-video-player.ytp-delhi-modern.ytp-fullscreen .ytp-chrome-bottom .ytp-time-wrapper {
     top: -16px;
 }
 
@@ -694,7 +694,7 @@
 	background-color: transparent !important;
 }
 
-.ytp-big-mode .ytp-scrubber-container {
+.ytp-fullscreen .ytp-scrubber-container {
     left: 0 !important;
 }
 
@@ -765,19 +765,19 @@
 	color: white;
 }
 
-.ytp-big-mode .ytp-menuitem-label {
+.ytp-fullscreen .ytp-menuitem-label {
 	font-size: 90% !important;
 }
   
-.ytp-big-mode.ytp-contextmenu.ytp-popup.ytp-contextmenu {
+.ytp-fullscreen.ytp-contextmenu.ytp-popup.ytp-contextmenu {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel .ytp-panel-menu {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel .ytp-panel-menu {
 	height: 240px !important;
 }
 
