--- a/css/2010.css
+++ b/css/2010.css
@@ -38,7 +38,7 @@
 	width: 100% !important;
 }
 
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar-container {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar-container {
     bottom: 33px !important;
 }
 
@@ -62,7 +62,7 @@
 
 /* this is only used in embeds & fullscreen */
 .ytp-embed .ytp-chrome-bottom .ytp-progress-bar:after,
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar:after {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar:after {
     content: '';
     display: block;
     position: absolute;
@@ -74,7 +74,7 @@
     transform: scaleY(.6);
 }
 
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar:after {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar:after {
 	width: 48px;
 }
 
@@ -120,7 +120,7 @@
     top: 0;
 }
 
-.ytp-big-mode .ytp-progress-bar {
+.ytp-fullscreen .ytp-progress-bar {
     bottom: 1px;
 }
 
@@ -155,7 +155,7 @@
 	height: var(--pt-progress-bar-unfocused-height) !important;
 }
 
-.ytp-big-mode.ytp-autohide:not(.ytp-watch-controls):not(.paused-mode) .ytp-chrome-bottom, .ytp-big-mode .ytp-chrome-bottom[aria-hidden=true] {
+.ytp-fullscreen.ytp-autohide:not(.ytp-watch-controls):not(.paused-mode) .ytp-chrome-bottom, .ytp-fullscreen .ytp-chrome-bottom[aria-hidden=true] {
     opacity: 1 !important;
     bottom: -41px;
 }
@@ -226,7 +226,7 @@
 	background-color: transparent !important;
 }
 
-.ytp-big-mode .ytp-scrubber-container {
+.ytp-fullscreen .ytp-scrubber-container {
     left: -12px !important;
 }
 
@@ -374,7 +374,7 @@
     bottom: 1px;
 }
 
-.ytp-big-mode .ytp-chapter-title {
+.ytp-fullscreen .ytp-chapter-title {
 	font-size: 14px;
 }
 
@@ -397,7 +397,7 @@
     top: 2px;
 }
 
-.ytp-big-mode .ytp-volume-panel {
+.ytp-fullscreen .ytp-volume-panel {
 	top: -1px;
 }
 
@@ -406,7 +406,7 @@
     bottom: 34px;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider {
 	min-height: 50px !important;
 }
 
@@ -436,7 +436,7 @@
 	background: linear-gradient(90deg, #0b0b0b45, #00000000);
 }
 
-.ytp-big-mode .ytp-volume-slider-active .ytp-volume-panel:after {
+.ytp-fullscreen .ytp-volume-slider-active .ytp-volume-panel:after {
 	content: '';
 	display: block;
 	position: relative;
@@ -451,7 +451,7 @@
     width: 48px !important;
 }
 
-.ytp-big-mode .ytp-volume-slider-active .ytp-volume-panel {
+.ytp-fullscreen .ytp-volume-slider-active .ytp-volume-panel {
     width: 68px !important;
 }
 
@@ -477,7 +477,7 @@
     background: black !important;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider-handle {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider-handle {
 	position: absolute;
     top: 20%;
     margin-top: 0px !important;
@@ -487,11 +487,11 @@
     border-radius: 0px !important;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle::after {
+.ytp-fullscreen .ytp-volume-slider-handle::after {
 	left: 6px;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle:before {
+.ytp-fullscreen .ytp-volume-slider-handle:before {
     width: 88px;
 	height: 4px !important;
 }
@@ -525,7 +525,7 @@
 	top: 4px !important;
 }
 
-.ytp-big-mode .ytp-button.ytp-settings-button::after {
+.ytp-fullscreen .ytp-button.ytp-settings-button::after {
 	font-size: 8px !important;
 	right: 2px !important;
 	top: 5px !important;
@@ -655,19 +655,19 @@
 	color: white;
 }
 
-.ytp-big-mode .ytp-menuitem-label {
+.ytp-fullscreen .ytp-menuitem-label {
 	font-size: 90% !important;
 }
   
-.ytp-big-mode.ytp-contextmenu.ytp-popup.ytp-contextmenu {
+.ytp-fullscreen.ytp-contextmenu.ytp-popup.ytp-contextmenu {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel .ytp-panel-menu {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel .ytp-panel-menu {
 	height: 240px !important;
 }
 
@@ -718,7 +718,7 @@
 	top: -9px;
 }
 
-.ytp-big-mode.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+.ytp-fullscreen.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
     top: -7px;
 }
 
