--- a/css/2013.css
+++ b/css/2013.css
@@ -53,7 +53,7 @@
 
 /* this is only used in embeds & fullscreen */
 .ytp-embed .ytp-chrome-bottom .ytp-progress-bar:after,
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar:after {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar:after {
     content: '';
     display: block;
     position: absolute;
@@ -66,7 +66,7 @@
     transform: scaleY(.4);
 }
 
-.ytp-big-mode .ytp-chrome-bottom .ytp-progress-bar:after {
+.ytp-fullscreen .ytp-chrome-bottom .ytp-progress-bar:after {
 	width: 48px;
 }
 
@@ -104,11 +104,11 @@
     top: 0;
 }
 
-.ytp-big-mode .ytp-progress-bar {
+.ytp-fullscreen .ytp-progress-bar {
 	height: 5px !important;
 }
 
-.ytp-big-mode .ytp-progress-bar:hover {
+.ytp-fullscreen .ytp-progress-bar:hover {
 	height: var(--pt-progress-bar-full-height) !important;
 }
 
@@ -143,7 +143,7 @@
 	height: var(--pt-progress-bar-unfocused-height) !important;
 }
 
-.ytp-big-mode.ytp-autohide:not(.ytp-watch-controls):not(.paused-mode) .ytp-chrome-bottom, .ytp-big-mode .ytp-chrome-bottom[aria-hidden=true] {
+.ytp-fullscreen.ytp-autohide:not(.ytp-watch-controls):not(.paused-mode) .ytp-chrome-bottom, .ytp-fullscreen .ytp-chrome-bottom[aria-hidden=true] {
     opacity: 1 !important;
     bottom: -41px;
 }
@@ -358,7 +358,7 @@
     width: auto !important;
 }
 
-.ytp-big-mode .ytp-chapter-title {
+.ytp-fullscreen .ytp-chapter-title {
 	font-size: 14px;
 }
 
@@ -390,11 +390,11 @@
 	margin-right: 0;
 }
 
-.ytp-big-mode .ytp-volume-slider-active .ytp-volume-panel {
+.ytp-fullscreen .ytp-volume-slider-active .ytp-volume-panel {
 	width: 68px !important;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider {
 	min-height: 50px !important;
 }
 
@@ -417,7 +417,7 @@
     height: 5px;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider-handle {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider-handle {
 	border-radius: 0px !important;
 	margin-top: 0 !important;
 	height: 14px !important;
@@ -426,12 +426,12 @@
 	top: 20%;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle::before {
+.ytp-fullscreen .ytp-volume-slider-handle::before {
     width: 86px;
 	height: 4px !important;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle::after {
+.ytp-fullscreen .ytp-volume-slider-handle::after {
 	left: 6px;
 }
 
@@ -472,7 +472,7 @@
 	top: 8px !important;
 }
 
-.ytp-big-mode .ytp-button.ytp-settings-button::after {
+.ytp-fullscreen .ytp-button.ytp-settings-button::after {
 	font-size: 8px !important;
 	right: 2px !important;
 	top: 5px !important;
@@ -547,7 +547,7 @@
 	color: gray;
 }
 
-.ytp-big-mode .ytp-menuitem-label {
+.ytp-fullscreen .ytp-menuitem-label {
 	font-size: 90% !important;
 }
 
@@ -555,15 +555,15 @@
 	background: url(chrome-extension://__MSG_@@extension_id__/img/inverted-check.svg) !important;
 }
   
-.ytp-big-mode.ytp-contextmenu.ytp-popup.ytp-contextmenu {
+.ytp-fullscreen.ytp-contextmenu.ytp-popup.ytp-contextmenu {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel .ytp-panel-menu {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel .ytp-panel-menu {
 	height: 240px !important;
 }
 
@@ -610,7 +610,7 @@
 	top: 1px;
 }
 
-.ytp-big-mode .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+.ytp-fullscreen .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
 	top: 0;
 }
 
@@ -618,7 +618,7 @@
 	top: -7px;
 }
 
-.ytp-big-mode.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+.ytp-fullscreen.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
     top: -8px;
 }
 
