--- a/css/2015.css
+++ b/css/2015.css
@@ -25,12 +25,12 @@
 	margin: auto;
 }
 
-.html5-video-player:not(.ytp-big-mode) .ytp-chrome-bottom {
+.html5-video-player:not(.ytp-fullscreen) .ytp-chrome-bottom {
 	width: calc(100% - 24px) !important;
 }
 
 .ytp-gradient-bottom,
-.ytp-big-mode .ytp-gradient-top
+.ytp-fullscreen .ytp-gradient-top
 {
 	display: block !important;
 	opacity: 1 !important;
@@ -100,11 +100,11 @@
     top: 0;
 }
 
-.ytp-big-mode .ytp-progress-bar {
+.ytp-fullscreen .ytp-progress-bar {
 	height: 5px !important;
 }
 
-.ytp-big-mode .ytp-progress-bar:hover {
+.ytp-fullscreen .ytp-progress-bar:hover {
 	height: var(--pt-progress-bar-full-height) !important;
 }
 
@@ -367,7 +367,7 @@
     width: auto !important;
 }
 
-.ytp-big-mode .ytp-chapter-title {
+.ytp-fullscreen .ytp-chapter-title {
 	font-size: 14px;
 }
 
@@ -399,11 +399,11 @@
 	margin-right: 0;
 }
 
-.ytp-big-mode .ytp-volume-slider-active .ytp-volume-panel {
+.ytp-fullscreen .ytp-volume-slider-active .ytp-volume-panel {
 	width: 68px !important;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider {
 	min-height: 50px !important;
 }
 
@@ -426,7 +426,7 @@
     height: 5px;
 }
 
-.ytp-big-mode .ytp-volume-panel .ytp-volume-slider-handle {
+.ytp-fullscreen .ytp-volume-panel .ytp-volume-slider-handle {
 	border-radius: 0px !important;
 	margin-top: 0 !important;
 	height: 14px !important;
@@ -435,12 +435,12 @@
 	top: 20%;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle::before {
+.ytp-fullscreen .ytp-volume-slider-handle::before {
     width: 86px;
 	height: 4px !important;
 }
 
-.ytp-big-mode .ytp-volume-slider-handle::after {
+.ytp-fullscreen .ytp-volume-slider-handle::after {
 	left: 6px;
 }
 
@@ -484,7 +484,7 @@
 	
 }
 
-.ytp-big-mode .ytp-button.ytp-settings-button::after {
+.ytp-fullscreen .ytp-button.ytp-settings-button::after {
 	font-size: 8px !important;
 	right: 2px !important;
 	top: 5px !important;
@@ -495,7 +495,7 @@
 	top: 8px !important;
 }
 
-.ytp-big-mode .ytp-button.ytp-settings-button::after {
+.ytp-fullscreen .ytp-button.ytp-settings-button::after {
 	font-size: 8px !important;
 	right: 2px !important;
 	top: 5px !important;
@@ -560,7 +560,7 @@
 	display: none;
 }
 
-.ytp-big-mode .ytp-chrome-top .ytp-button {
+.ytp-fullscreen .ytp-chrome-top .ytp-button {
 	padding-top: 0px;
 }
 
@@ -666,19 +666,19 @@
 	padding: 0 5px;
 }
 
-.ytp-big-mode .ytp-menuitem-label {
+.ytp-fullscreen .ytp-menuitem-label {
 	font-size: 90% !important;
 }
   
-.ytp-big-mode.ytp-contextmenu.ytp-popup.ytp-contextmenu {
+.ytp-fullscreen.ytp-contextmenu.ytp-popup.ytp-contextmenu {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel {
 	height: 240px !important;
 }
 
-.ytp-big-mode.ytp-contextmenu .ytp-panel .ytp-panel-menu {
+.ytp-fullscreen.ytp-contextmenu .ytp-panel .ytp-panel-menu {
 	height: 240px !important;
 }
 
@@ -724,7 +724,7 @@
 	top: 1px;
 }
 
-.ytp-big-mode .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+.ytp-fullscreen .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
 	top: 0;
 }
 
@@ -732,7 +732,7 @@
 	top: -7px;
 }
 
-.ytp-big-mode.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
+.ytp-fullscreen.ytp-autohide .ytp-chrome-bottom[data-pt-fakebar] #previewbar {
     top: -8px;
 }
 
